Changes markdown link to HTML anchor

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[Toptal](https://www.toptal.com/python#elegant-maintainable-and-fun)
+<a href="https://www.toptal.com/python#elegant-maintainable-and-fun">Toptal</a>
